--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^4.3.1",
+    "apollo-boost": "^0.1.16",
+    "graphql": "^14.0.2",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0"
+    "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "3.1.0",
+    "styled-components": "^4.0.0",
+    "styled-reset": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
