--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^4.4.0",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
-    "styled-components": "^4.0.0",
+    "styled-components": "3.3.3",
     "styled-reset": "^1.6.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
@@ -55,7 +56,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
+    "codegen": "apollo codegen:generate src/types/api.d.ts --queries='src/**/*.queries.ts' --addTypename --schema schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
