--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-sidebar": "^3.0.0",
     "apollo": "^1.9.2",
     "apollo-boost": "^0.1.16",
     "autoprefixer": "7.1.6",
@@ -32,8 +33,10 @@
     "react-apollo": "^2.2.4",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-facebook-login": "^4.1.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^4.4.0",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
@@ -60,7 +63,6 @@
     "test": "node scripts/test.js --env=jsdom",
     "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries='src/**/!(*.local).ts' --addTypename --schema schema.json --target typescript --outputFlat"
-
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
