--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo": "^1.9.2",
     "apollo-boost": "^0.1.16",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
@@ -20,6 +21,7 @@
     "file-loader": "1.1.5",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
+    "google-maps-react": "^2.0.2",
     "graphql": "^14.0.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -65,6 +67,8 @@
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries='src/**/!(*.local).ts' --addTypename --schema schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/googlemaps": "^3.30.15",
     "@types/jest": "^23.3.5",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.17",
