--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/react-sidebar": "^3.0.0",
     "apollo": "^1.9.2",
     "apollo-boost": "^0.1.16",
+    "apollo-client": "2.3.8",
+    "apollo-link-ws": "^1.0.9",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-jest": "20.0.3",
@@ -45,6 +47,7 @@
     "style-loader": "0.19.0",
     "styled-components": "3.3.3",
     "styled-reset": "^1.6.0",
+    "subscriptions-transport-ws": "^0.9.15",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
     "ts-loader": "^2.3.7",
